RESOLVED FIXED226911
[Live Text] Text selection inside image elements should not be cleared upon resize
https://bugs.webkit.org/show_bug.cgi?id=226911
Summary [Live Text] Text selection inside image elements should not be cleared upon r...
Wenson Hsieh
Reported 2021-06-10 20:45:49 PDT
.
Attachments
For EWS (19.55 KB, patch)
2021-06-10 21:10 PDT, Wenson Hsieh
no flags
Remove unnecessary include (19.35 KB, patch)
2021-06-10 21:12 PDT, Wenson Hsieh
thorton: review+
Patch for landing (19.35 KB, patch)
2021-06-11 11:13 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-06-10 21:10:59 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2021-06-10 21:12:18 PDT
Created attachment 431177 [details] Remove unnecessary include
Wenson Hsieh
Comment 3 2021-06-11 11:06:28 PDT
Comment on attachment 431177 [details] Remove unnecessary include View in context: https://bugs.webkit.org/attachment.cgi?id=431177&action=review Thanks for the review! > Source/WebCore/ChangeLog:30 > + Importantly, in step (1), we avoid regerating shadow DOM content in the case where the DOM elements already (I just noticed "regerating" here. Will fix this up before landing)
Wenson Hsieh
Comment 4 2021-06-11 11:13:56 PDT
Created attachment 431212 [details] Patch for landing
EWS
Comment 5 2021-06-11 12:55:21 PDT
Committed r278775 (238732@main): <https://commits.webkit.org/238732@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 431212 [details].
Radar WebKit Bug Importer
Comment 6 2021-06-11 12:56:19 PDT
Note You need to log in before you can comment on or make changes to this bug.